changes made to  index  file and new page has been added

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<title>Portfolio</title>
 </head>
 <body>
-<h1>my first webpage, yay</h1>
+<h1 align="center" style="color: magenta;">Hello from my first webpage</h1>
+<a href="2ndpage.html">click here to open second page</a>
 </body>
 </html>
